# my-os

./: Cargo.toml  README.md  build.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  graphics.rs  interrupts.rs  logger.rs  main.rs
legacy/: vga_buffer.rs
legacy/.cargo/: config.toml
src/: main.rs
