[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
# forced-target = "x86_64-my_os.json"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader-x86_64-common = "0.11.4"
bootloader_api = "0.11.4"
log = { version = "0.4.20", default-features = false, features = [] }
conquer-once = { version = "0.4.0", default-features = false }
x86_64 = { version = "0.14" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
